--- a/index.html
+++ b/index.html
@@ -1,28 +1,61 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Construction</title>
-    <style>
-        html, body {
-            width: 10vw;
-            height: 100vh;
-            padding: 0;
-            margin: 0;
-        }
-        main {
-            height: 100vh;
-            margin-left: auto;
-            margin-right: auto;
-            display: flex;
-            align-items: center;
-            & h1 { padding-left: calc((100vw - 1ch) / 2); }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>d011</title>
+  <link rel="stylesheet" href="style.css">
+  <script type="module" src="index.js"></script>
 </head>
 <body>
+  <div id="outer">
     <main>
-        <h1>!</h1>
+        <div id="landing" class="evenpad">
+            <h1>25-04-00</h1>
+            <hr>
+            <a href="https://youtu.be/dQw4w9WgXcQ">Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://youtu.be/H9K8-3PHZOU">Release Party Tickets &lt;&lt;&lt;&lt;&lt;&lt;</a>
+        </div>
     </main>
+    <div id="navbar">
+      <a class="full" href="#" style="background-image: url('/asset/hingehigh1bit.gif'); width: 177px; height: 109px;"></a>
+      <nav class="full">
+        <a href="#">&gt;---&lt;</a>
+        <a href="#">&gt;---&lt;</a>
+        <a href="#">&gt;---&lt;</a>
+        <a href="#">&gt;---&lt;</a>
+        <a href="#">&gt;---&lt;</a>
+      </nav>
+      <div class="full" style="background-image: url('/asset/hingelow1bit.gif'); width: 176px; height: 110px;"></div>
+      <nav class="compact">
+        <a href="#">-</a>
+        <a href="#">-</a>
+        <a href="#">-</a>
+        <a href="#">-</a>
+        <a href="#">-</a>
+      </nav>
+      <a class="compact" href="#" style="background-image: url('/asset/dollhead1bit.gif'); width: 55px; height: 73px;"></a>
+    </div>
+  </div>
+  <!-- FILTERS -->
+  <svg xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+    <filter id="bayer" color-interpolation-filters="sRGB" x="0" y="0" width="100%" height="100%">
+      <feImage href="asset/bayerkernel.png" x="0" y="0" width="2" height="2" />
+      <feTile />
+      <feComposite in2="SourceGraphic" operator="arithmetic" k1="0" k2="1" k3="1" k4="0" />
+      <feComponentTransfer>
+        <feFuncR type="discrete" tableValues="0 1" />
+        <feFuncG type="discrete" tableValues="0 1" />
+        <feFuncB type="discrete" tableValues="0 1" />
+      </feComponentTransfer>
+    </filter>
+    <filter id="threshold" color-interpolation-filters="sRGB" width="120%" height="120%">
+      <feComponentTransfer>
+        <feFuncR type="discrete" tableValues="0 1" />
+        <feFuncG type="discrete" tableValues="0 1" />
+        <feFuncB type="discrete" tableValues="0 1" />
+      </feComponentTransfer>
+    </filter>
+  </svg>
 </body>
 </html>
