--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="landing" class="evenpad">
             <h1>25-04-25</h1>
             <hr>
-            <a href="https://youtu.be/dQw4w9WgXcQ">Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
-            <a href="https://youtu.be/H9K8-3PHZOU">Release Party Tickets &lt;&lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://youtu.be/dQw4w9WgXcQ">&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt; Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://youtu.be/H9K8-3PHZOU">&lt;&lt;&lt;&lt;&lt;&lt;&lt; Release Party &lt;&lt;&lt;&lt;&lt;&lt;</a>
         </div>
     </main>
     <div id="navbar">
