update release date appearance

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div id="outer">
     <main>
         <div id="landing" class="evenpad">
-            <h1>25-04-25</h1>
+            <img src="asset/date.gif" alt="25-04" class="date">
             <hr>
-            <a href="https://youtu.be/dQw4w9WgXcQ">&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt; Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
-            <a href="https://youtu.be/H9K8-3PHZOU">&lt;&lt;&lt;&lt;&lt;&lt;&lt; Release Party &lt;&lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://youtu.be/dQw4w9WgXcQ">&lt;&lt;&lt;&lt;&lt;&lt;&lt; Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://youtu.be/H9K8-3PHZOU">&lt;&lt;&lt;&lt; Release Party &lt;&lt;&lt;&lt;</a>
         </div>
     </main>
     <div id="navbar">
