--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </main>
     <div id="navbar">
-      <a class="full" href="#" style="background-image: url('/asset/hingehigh1bit.gif'); width: 177px; height: 109px;"></a>
+      <a class="full" href="/" style="background-image: url('/asset/hingehigh1bit.gif'); width: 177px; height: 109px;"></a>
       <nav class="full">
         <a href="#">&gt;---&lt;</a>
         <a href="#">&gt;---&lt;</a>
@@ -34,7 +34,7 @@
         <a href="#">-</a>
         <a href="#">-</a>
       </nav>
-      <a class="compact" href="#" style="background-image: url('/asset/dollhead1bit.gif'); width: 55px; height: 73px;"></a>
+      <a class="compact" href="/" style="background-image: url('/asset/dollhead1bit.gif'); width: 55px; height: 73px;"></a>
     </div>
   </div>
   <!-- FILTERS -->
