--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="landing" class="evenpad">
             <h1>25-04-00</h1>
             <hr>
-            <a href="https://distrokid.com/hyperfollow/boxkitty/d011">Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
-            <a href="https://partiful.com/e/DCGWn1eI4jIZhEKDoWW8">RSVP &lt;&lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://distrokid.com/hyperfollow/boxkitty/d011">&lt;&lt;&lt;&lt;&lt; Presave &lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://partiful.com/e/DCGWn1eI4jIZhEKDoWW8">&lt;&lt;&lt;&lt;&lt;&lt; RSVP &lt;&lt;&lt;&lt;&lt;&lt;</a>
         </div>
     </main>
     <div id="navbar">
