refixed it cuz it brokey somethow

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <div id="outer">
     <main>
         <div id="landing" class="evenpad">
-            <h1>25-04-00</h1>
+            <img src="asset/date.gif" alt="25-04" class="date">
             <hr>
-            <a href="https://distrokid.com/hyperfollow/boxkitty/d011">&lt;&lt;&lt;&lt;&lt; Presave &lt;&lt;&lt;&lt;&lt;</a>
-            <a href="https://partiful.com/e/DCGWn1eI4jIZhEKDoWW8">&lt;&lt;&lt;&lt;&lt;&lt; RSVP &lt;&lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://distrokid.com/hyperfollow/boxkitty/d011">&lt;&lt;&lt;&lt;&lt;&lt;&lt; Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://partiful.com/e/DCGWn1eI4jIZhEKDoWW8">&lt;&lt;&lt;&lt; Release Party &lt;&lt;&lt;&lt;</a>
         </div>
     </main>
     <div id="navbar">
-      <a class="full" href="#" style="background-image: url('/asset/hingehigh1bit.gif'); width: 177px; height: 109px;"></a>
+      <a class="full" href="/" style="background-image: url('/asset/hingehigh1bit.gif'); width: 177px; height: 109px;"></a>
       <nav class="full">
         <a href="#">&gt;---&lt;</a>
         <a href="#">&gt;---&lt;</a>
@@ -34,7 +34,7 @@
         <a href="#">-</a>
         <a href="#">-</a>
       </nav>
-      <a class="compact" href="#" style="background-image: url('/asset/dollhead1bit.gif'); width: 55px; height: 73px;"></a>
+      <a class="compact" href="/" style="background-image: url('/asset/dollhead1bit.gif'); width: 55px; height: 73px;"></a>
     </div>
   </div>
   <!-- FILTERS -->
