changed pre-release to RSVP

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="asset/date.gif" alt="25-04" class="date">
             <hr>
             <a href="https://distrokid.com/hyperfollow/boxkitty/d011">&lt;&lt;&lt;&lt;&lt;&lt;&lt; Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
-            <a href="https://partiful.com/e/DCGWn1eI4jIZhEKDoWW8">&lt;&lt;&lt;&lt; Release Party &lt;&lt;&lt;&lt;</a>
+            <a href="https://partiful.com/e/DCGWn1eI4jIZhEKDoWW8">&lt;&lt;&lt;&lt; RSVP &lt;&lt;&lt;&lt;</a>
         </div>
     </main>
     <div id="navbar">
