testin with rsvp linkin her

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="landing" class="evenpad">
             <img src="asset/date.gif" alt="25-04" class="date">
             <hr>
-            <a href="https://distrokid.com/hyperfollow/boxkitty/d011">&lt;&lt;&lt;&lt;&lt;&lt;&lt; Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
-            <a href="https://partiful.com/e/DCGWn1eI4jIZhEKDoWW8">&lt;&lt;&lt;&lt; Release Party &lt;&lt;&lt;&lt;</a>
+            <a href="https://distrokid.com/hyperfollow/boxkitty/d011">&gt;&gt;&gt;&gt;&gt;&gt;&gt; Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
+            <a href="https://partiful.com/e/DCGWn1eI4jIZhEKDoWW8">&gt;&gt;&gt;&gt;&gt;&gt; RSVP Link &lt;&lt;&lt;&lt;&lt;&lt;</a>
         </div>
     </main>
     <div id="navbar">
