tighten pre-order

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <hr>
             <a href="https://distrokid.com/hyperfollow/boxkitty/d011">&gt;&gt;&gt;&gt;&gt;&gt;&gt; Presave &lt;&lt;&lt;&lt;&lt;&lt;&lt;</a>
             <a href="https://partiful.com/e/DCGWn1eI4jIZhEKDoWW8">&gt;&gt;&gt;&gt;&gt;&gt; RSVP Link &lt;&lt;&lt;&lt;&lt;&lt;</a>
-            <a href="https://boxkitty.bandcamp.com/album/d011">&gt;&gt;&gt;&gt;&gt;&gt; Pre - Order &lt;&lt;&lt;&lt;&lt;&lt;</a> 
+            <a href="https://boxkitty.bandcamp.com/album/d011">&gt;&gt;&gt;&gt;&gt; Pre - Order &lt;&lt;&lt;&lt;&lt;</a> 
         </div>
     </main>
     <div id="navbar">
